# src/internal/user/api/router/user_routers.go
@@ -1,7 +1,6 @@
 package router
 
 import (
-	"github.com/alielmi98/golang-otp-auth/internal/middlewares"
 	"github.com/alielmi98/golang-otp-auth/internal/user/api/handler"
 	"github.com/alielmi98/golang-otp-auth/pkg/config"
 	"github.com/gin-gonic/gin"
@@ -9,7 +8,7 @@ import (
 
 func Users(router *gin.RouterGroup, cfg *config.Config, handler *handler.UsersHandler) {
 
-	router.POST("/send-otp/:mobile_number", middlewares.OtpRateLimiter(), handler.SendOtp)
+	router.POST("/send-otp", handler.SendOtp)
 	router.POST("/login-by-mobile", handler.RegisterLoginByMobileNumber)
 	router.GET("/:mobile_number", handler.GetUserByMobileNumber)
 	router.GET("/", handler.GetUsers)
